# said

./: .gitignore  Cargo.toml  dev.sh  install.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: release.yml
.qoder/repowiki/en/content/: Deployment and Operations.md  Development and Contributing.md  Getting Started.md  Project Overview.md  Security and Privacy.md  Troubleshooting and FAQ.md
.qoder/repowiki/en/content/AI and Machine Learning Integration/: AI and Machine Learning Integration.md  Embedding and Vector System.md  Language Model Integration.md  Prompt Engineering System.md  Speech Processing Integration.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Authentication Endpoints.md  Core Endpoints.md  Data Management Endpoints.md
.qoder/repowiki/en/content/Architecture Overview/: Architecture Overview.md  Backend Architecture.md  Data Flow Architecture.md  Frontend Architecture.md  Native Integration Architecture.md  System Design.md
.qoder/repowiki/en/content/Backend Service/: API Reference.md  Application State Management.md  Authentication and Security.md  Backend Service.md  Data Management Layer.md  Speech Processing Integration.md
.qoder/repowiki/en/content/Database Schema and Data Management/: Data Access and Query Patterns.md  Database Overview and Design.md  Database Schema and Data Management.md  Schema Migration System.md
.qoder/repowiki/en/content/Frontend Application/: Frontend Application.md  React Application Architecture.md  Styling Architecture.md  Tauri Integration.md  UI Components.md  View System and Navigation.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
app/: globals.css  layout.tsx  page.tsx
components/: AnnouncementBar.tsx  CodingSection.tsx  FaqSection.tsx  FeaturesSection.tsx  Hero.tsx  Navbar.tsx  ProductivitySection.tsx  ResultsSection.tsx  SpeakSection.tsx  SpeedSection.tsx  TrustLogos.tsx
components/motion/: CountUp.tsx  GradientMesh.tsx  MagneticButton.tsx  Marquee.tsx  Reveal.tsx  ScrollProgress.tsx
components/providers/: SmoothScrollProvider.tsx
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: learning_flow_tests.rs  lib.rs  main.rs
crates/backend/src/auth/: mod.rs
crates/backend/src/embedder/: gemini.rs
crates/backend/src/llm/: alias_review.rs  classifier.rs  edit_diff.rs  gateway.rs  gemini_direct.rs  groq.rs  meaning.rs  mod.rs  openai_codex.rs  phonetic_triage.rs  phonetics.rs  pre_filter.rs  promotion_gate.rs  prompt.rs  script.rs  stream_safety.rs  vocab_resolver.rs
crates/backend/src/routes/: classify.rs  cloud.rs  feedback.rs  health.rs  history.rs  invite.rs  mod.rs  openai_oauth.rs  pending_edits.rs  pre_embed.rs  prefs.rs  stt.rs  text.rs  vocabulary.rs  voice.rs
crates/backend/src/store/: corrections.rs  history.rs  mod.rs  openai_oauth.rs  pending_edits.rs  pending_promotions.rs  prefs.rs  stt_replacements.rs  users.rs  vectors.rs  vocab_embeddings.rs  vocab_fts.rs  vocabulary.rs
crates/backend/src/store/migrations/: 001_initial.sql  002_vectors.sql  003_output_language.sql  004_api_keys.sql  005_llm_provider.sql  006_openai_oauth.sql  007_pending_edits.sql  008_recording_audio_id.sql  009_word_corrections.sql  010_groq_api_key.sql  011_embed_dims_256.sql  012_vocabulary_and_stt_replacements.sql  013_pending_promotions_and_language.sql  014_vocabulary_example_context.sql  015_vocab_embeddings.sql  016_vocab_term_type.sql  017_centroid_decay_fts.sql  018_vocab_meaning.sql  019_background_learning_trust.sql
crates/backend/src/stt/: background.rs  bias.rs  deepgram.rs  mod.rs
crates/backend/tests/: learning_eval.rs
crates/backend/tests/data/: learning_golden.json
crates/control-plane/: Cargo.toml  Dockerfile  fly.toml
crates/control-plane/migrations/: 001_initial.sql
crates/control-plane/src/: auth.rs  main.rs  store.rs
crates/control-plane/src/routes/: auth.rs  health.rs  license.rs  metering.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: deepgram.rs  lib.rs
crates/hotkey/: Cargo.toml
crates/hotkey/src/: lib.rs
crates/paster/: Cargo.toml
crates/paster/examples/: test_ax_methods.rs
crates/paster/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/voice-polish/: Cargo.toml  build.rs
crates/voice-polish/src/: learning.rs  main.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop/src/: App.tsx  StatusBar.tsx  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/binaries/: polish-backend-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: gen_tray_icon.py  icon.icns
desktop/src-tauri/src/: api.rs  backend.rs  backend_guard.rs  desktop.rs  dg_stream.rs  main.rs  permissions.rs
desktop/src/components/: BrandMark.tsx  DashboardCards.tsx  HeroBanner.tsx  InviteTeamModal.tsx  NotificationToast.tsx  OnboardingFlow.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  tabs.tsx
desktop/src/components/views/: DashboardView.tsx  HistoryView.tsx  HomeView.tsx  InsightsView.tsx  SettingsView.tsx  VocabularyView.tsx
desktop/src/lib/: invoke.ts  useAudioPlayer.ts  useTheme.ts
docs/: permission-learning.md
landing/: package-lock.json  package.json  tailwind.config.ts
landing-page/: package.json  pnpm-lock.yaml
landing-page/src/app/: globals.css  layout.tsx  page.tsx
landing-page/src/components/: SetupWizard.tsx
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: AnnouncementBar.tsx  CodingSection.tsx  FeaturesSection.tsx  Hero.tsx  Navbar.tsx  ProductivitySection.tsx  ResultsSection.tsx  SpeakSection.tsx  SpeedSection.tsx  TrustLogos.tsx
landing/lib/: tokens.ts
lib/: motion.ts  tokens.ts
public/images/: attribution.md
scripts/: build-dmg.sh
src/: api.rs  app.rs  config.rs  hotkey.rs  main.rs  menubar.rs  paster.rs  recorder.rs
(+9 files in other folders)
