[package]
name = "voice-polish"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
arboard = "3"
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
dispatch = "0.2"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
