[package]
name    = "voice-polish-control-plane"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "control-plane"
path = "src/main.rs"

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
clap               = { version = "4", features = ["derive", "env"] }
uuid               = { version = "1", features = ["v4", "serde"] }
tower-http         = { version = "0.5", features = ["cors"] }

# Postgres + async driver
sqlx = { version = "0.7", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "macros",
] }

# Auth
argon2 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }
